<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="#f3f3f3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:paddingBottom="20dp"
        android:clipToPadding="false"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/totalWhite"
            android:elevation="1dp"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/avatar01"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:id="@+id/avatar_my"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/avatar_my"
                android:layout_toEndOf="@+id/avatar_my">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="雷勋陶"
                    android:textColor="@color/textRegularBlack"
                    android:textSize="16sp"

                    android:layout_marginStart="16dp"
                    android:id="@+id/name_my"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="看房中"
                    android:textColor="@color/textLittleBlack"
                    android:layout_marginStart="8dp"
                    android:textSize="12sp"
                    />
            </LinearLayout>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:background="@color/totalWhite"
            android:elevation="1dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/setting_myself"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_myself"
                    android:textSize="14sp"
                    android:textColor="@color/textRegularBlack"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/setting_message"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_message"
                    android:textSize="14sp"
                    android:textColor="@color/textRegularBlack"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/setting_collect"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_collect"
                    android:textSize="14sp"
                    android:textColor="@color/textRegularBlack"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/setting_history"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_history"
                    android:textSize="14sp"
                    android:textColor="@color/textRegularBlack"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:background="@color/totalWhite"
            android:elevation="1dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/setting_invive"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_invive"
                    android:textSize="14sp"
                    android:textColor="@color/textRegularBlack"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/setting_switch"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_switch"
                    android:textSize="14sp"
                    android:textColor="@color/textRegularBlack"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/setting_setting"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_setting"
                    android:textSize="14sp"
                    android:textColor="@color/textRegularBlack"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/setting_turnoff"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_turnoff"
                    android:textSize="14sp"
                    android:textColor="@color/textRegularBlack"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</ScrollView>
